<resources>
    <string name="app_name">TeamRhinoUASoftEng</string>
    <string name="Inventory">Inventory</string>
    <string name="Event">Events</string>
    <string name="Trans">Transactions</string>
    <string name="addTrans">AddTrans</string>
    <string name="Phone">Phone Number</string>
    <string name="Email">Email Address</string>
    <string name="amount">Amount</string>
    <string name="editIn">Edit Inventory</string>
    <string name="editCli">Edit Client</string>
    <string name="editEv">Edit Event</string>
    <string name="Welcome">Welcome to the Razorback Business Manaage System! (R.B.M.S) Please select what you need to manage.</string>
    <string name="editTr">Edit Transaction</string>
    <string name="item">Item</string>
    <string name="dateSold">Date Sold On</string>
    <string name="Client">Clients</string>
    <string name="Employee">Employees</string>
    <string name="title">RBMS</string>
    <string name="Time">TimeSet</string>
    <string name="Date">DateSet</string>
    <string name="back">Back</string>
    <string name="ok">Ok</string>
    <string name="search">search</string>
    <string name="delete">Delete</string>
    <string name="currentemail">Email</string>
    <string name="currentNumbe">Number</string>
    <string name="InTitle">Creating Inventory</string>
    <string name="editProduct">Edit Product</string>
    <string name="search_button">search</string>
    <string name="setTime">Set time for event</string>
    <string name="setDate">Set date for event</string>
    <string name="address">Address</string>
    <string name="addInv">AddInv</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="cost">Cost</string>
    <string name="quantity">Quantity</string>
    <string name="vendor">Vendor</string>
    <string name="update">Update</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert!</string>
    <string name="reorder">Reorder</string>
    <string name="addevent">addEvent</string>
    <string name="addclient">addClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_manage_inventory">manageInventory</string>
    <string name="title_activity_manage_events">manageEvents</string>
    <string name="title_activity_manage_transactions">manageTransactions</string>
    <string name="title_activity_manage_clients">manageClients</string>
    <string name="title_activity_add_inventory">addInventory</string>
    <string name="title_activity_view_event">viewEvent</string>
    <string name="title_activity_add_event">addEvent</string>
    <string name="title_activity_view_product">viewProduct</string>
    <string name="title_activity_manage_trnasactions">manageTrnasactions</string>
    <string name="title_activity_add_events">addEvents</string>
    <string name="title_activity_view_inventory">viewInventory</string>
    <string name="title_activity_view_my_event">ViewMyEvent</string>
    <string name="title_activity_update_items">updateItems</string>
    <string name="title_activity_add_client">addClient</string>
    <string name="title_activity_view_my_client">ViewMyClient</string>
    <string name="title_activity_view_client">ViewClient</string>
    <string name="title_activity_add_transaction">addTransaction</string>
    <string name="title_activity_view_transactions">ViewTransactions</string>
    <string name="title_activity_view_my_transactions">ViewMyTransactions</string>
    <string name="title_activity_edit_inventory">EditInventory</string>
    <string name="title_activity_edit_event">EditEvent</string>
    <string name="title_activity_edit_client">EditClient</string>
    <string name="title_activity_edit_transaction">EditTransaction</string>
    <string name="CLTitle">Creating Aquaitances</string>
    <string name="EVTitle">Creating Event</string>
    <string name="TATitle">Storing Transaction</string>
</resources>
