<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.softwareenginnering.teamrhinouasofteng.addInventory">

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:onClick="submitInventory"/>
    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:text="@string/back"
        android:onClick="backToManageInventory"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:id="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/cost"
        android:layout_alignStart="@+id/cost"
        android:layout_marginTop="152dp" />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/cost"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@id/name"
        android:hint="@string/cost" />
    <Spinner
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/vendors"
        android:layout_below="@+id/cost"
        android:layout_alignLeft="@+id/cost"
        android:layout_alignStart="@+id/cost">
    </Spinner>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/quantity"
        android:hint="@string/quantity"
        android:layout_below="@+id/vendors"
        android:layout_alignLeft="@+id/vendors"
        android:layout_alignStart="@+id/vendors" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/reorder"
        android:layout_below="@+id/quantity"
        android:layout_centerHorizontal="true"
        android:hint="@string/reorder" />


</RelativeLayout>
