<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.softwareenginnering.teamrhinouasofteng.addEvent"
    android:background="#7A0101">

    <Button
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:text="@string/back"
        android:id="@+id/back"
        android:singleLine="false"
        android:onClick="backManageEvent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#7A0101"
        android:background="#FFFFFF" />

    <Button
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_alignTop="@+id/back"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="addEvents"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#7A0101"
        android:background="#FFFFFF" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/address"
        android:layout_alignStart="@+id/address"
        android:layout_marginTop="168dp"
        android:background="#7A0101"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/setTime"
        android:id="@+id/setTime"
        android:onClick="setTime"
        android:layout_below="@+id/setDate"
        android:layout_alignLeft="@+id/setDate"
        android:layout_alignStart="@+id/setDate"
        android:background="#FFFFFF"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#7A0101" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/address"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:hint="@string/address"
        android:background="#7A0101"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#FFFFFF" />
    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/Employee"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:hint="@string/Employee"
        android:background="#7A0101"
        android:typeface="serif"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/setDate"
        android:id="@+id/setDate"
        android:layout_below="@+id/Employee"
        android:layout_centerHorizontal="true"
        android:onClick="setDate"
        android:background="#FFFFFF"
        android:textColor="#7A0101"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EVTitle"
        android:id="@+id/textView18"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textSize="30dp" />

</RelativeLayout>
