<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.softwareenginnering.projecthoneybadger.addClient">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="org.softwareenginnering.teamrhinouasofteng.addInventory">

        <Button
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:text="@string/submit"
            android:layout_alignParentBottom="true"
            android:onClick="submitClient"/>
        <Button
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:text="@string/back"
            android:onClick="backToManageClient"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/name"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/Email"
            android:layout_alignStart="@+id/Email"
            android:layout_marginTop="152dp" />
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/address"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_below="@id/name"
            android:hint="@string/address" />
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/Email"
            android:hint="@string/Email"
            android:layout_below="@+id/address"
            android:layout_alignLeft="@+id/address"
            android:layout_alignStart="@+id/address" />
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:hint="@string/Phone"
            android:layout_below="@+id/Email"
            android:layout_alignLeft="@+id/Email"
            android:layout_alignStart="@+id/Email" />



    </RelativeLayout>


</RelativeLayout>
