<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:background="#7A0101">

    <Button
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/Inventory"
        android:id="@+id/inventory"
        android:onClick="manageInventory"
        android:textStyle="bold|italic"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/events"
        android:layout_alignStart="@+id/events"
        android:background="#FFFFFF"
        android:textColor="#7A0101" />
    <Button
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_below="@+id/inventory"
        android:layout_centerInParent="true"
        android:text="@string/Event"
        android:id="@+id/events"
        android:onClick="manageEvents"
        android:textStyle="bold|italic"
        android:clickable="false"
        android:background="#FFFFFF"
        android:textColor="#7A0101" />
    <Button
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/Trans"
        android:id="@+id/transactions"
        android:onClick="manageTransactions"
        android:textStyle="bold|italic"
        android:background="#FFFFFF"
        android:layout_below="@+id/events"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:textColor="#7A0101" />

    <Button
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/clients"
        android:text="@string/Client"
        android:onClick="manageClients"
        android:textStyle="bold|italic"
        android:background="#FFFFFF"
        android:layout_below="@+id/transactions"
        android:layout_alignLeft="@+id/transactions"
        android:layout_alignStart="@+id/transactions"
        android:clickable="false"
        android:textColor="#7A0101" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/razorback_imaage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:id="@+id/textView6"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="20sp" />


</RelativeLayout>

