<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.softwareenginnering.teamrhinouasofteng.EditEvent"
    android:background="#7A0101">

    <Button
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:text="@string/back"
        android:id="@+id/back"
        android:singleLine="false"
        android:onClick="backManageEvent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#7A0101"
        android:background="#FFFFFF" />

    <Button
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_alignTop="@+id/back"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="addEvents"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#7A0101"
        android:background="#FFFFFF" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_marginTop="168dp"
        android:background="#7A0101"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/back"
        android:layout_alignEnd="@+id/back" />

    <Button
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/setTime"
        android:id="@+id/setTime"
        android:onClick="setTime"
        android:layout_below="@+id/setDate"
        android:layout_alignLeft="@+id/setDate"
        android:layout_alignStart="@+id/setDate"
        android:background="#FFFFFF"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#7A0101" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/address"
        android:hint="@string/address"
        android:background="#7A0101"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name" />
    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/Employee"
        android:hint="@string/Employee"
        android:background="#7A0101"
        android:typeface="serif"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/address"
        android:layout_alignLeft="@+id/address"
        android:layout_alignStart="@+id/address" />

    <Button
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/setDate"
        android:id="@+id/setDate"
        android:onClick="setDate"
        android:background="#FFFFFF"
        android:textColor="#7A0101"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:layout_below="@+id/Employee"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/textView12"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        android:layout_above="@+id/address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/textView13"
        android:layout_above="@+id/Employee"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textSize="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Employee"
        android:id="@+id/textView14"
        android:layout_above="@+id/setDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textSize="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:id="@+id/textView15"
        android:layout_alignBaseline="@+id/setTime"
        android:layout_alignBottom="@+id/setTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textSize="10dp"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        android:id="@+id/textView16"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        android:layout_below="@+id/setDate"
        android:layout_alignRight="@+id/textView13"
        android:layout_alignEnd="@+id/textView13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/Title"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
