<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.softwareenginnering.teamrhinouasofteng.manageTransactions"
    android:background="#7A0101">

    <Button
    android:layout_width="125dp"
    android:layout_height="45dp"
    android:id="@+id/back"
    android:text="@string/back"
    android:onClick="backMainMenu"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
        android:background="#FFFFFF"
        android:textColor="#7A0101"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:id="@+id/addTransaction"
        android:text="@string/addTrans"
        android:onClick="addTransaction"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#FFFFFF"
        android:textColor="#7A0101"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:id="@+id/search_field"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/search"
        android:background="#7A0101"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:editable="false"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:text="@string/search_button"
        android:id="@+id/button"
        android:layout_alignTop="@+id/search_field"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="searchTransactions"
        android:background="#FFFFFF"
        android:textColor="#7A0101"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/transacListView"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#FFFFFF" />
    </LinearLayout>

</RelativeLayout>
