<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.softwareenginnering.teamrhinouasofteng.manageClients">

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:text="@string/back"
        android:onClick="backMainMenu"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/search"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="searchClients" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/addclient"
        android:id="@+id/addClient"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/search_field"
        android:layout_alignTop="@+id/search"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/search" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/LinearLayout">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clientListView"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
